--- a/src/admin/components/Calendar/Calendar.css
+++ b/src/admin/components/Calendar/Calendar.css
@@ -4,3 +4,4 @@
 @import "./styles/responsive.css";
 @import "./styles/forms.css";
 @import "./styles/general.css";
+@import "./styles/dark-mode.css";
