--- a/src/components/UnifiedLogin.css
+++ b/src/components/UnifiedLogin.css
@@ -154,9 +154,9 @@
 }
 
 .login-logo {
-  width: 80px;
-  height: auto;
-  margin-bottom: 0.5rem;
+  width: 120px !important;
+  height: 120px !important;
+  margin-bottom: 1rem;
 }
 
 /* Estilos para las partículas */
